[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/enemies/basic_enemy/BasicEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/basic_enemy.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/basic_enemy/states/Idle.gd" type="Script" id=3]
[ext_resource path="res://entities/enemies/basic_enemy/states/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://entities/enemies/basic_enemy/states/Wander.gd" type="Script" id=5]
[ext_resource path="res://entities/enemies/basic_enemy/states/Chase.gd" type="Script" id=6]
[ext_resource path="res://entities/enemies/basic_enemy/states/Attack.gd" type="Script" id=7]
[ext_resource path="res://entities/enemies/basic_enemy/states/Impacted.gd" type="Script" id=8]
[ext_resource path="res://entities/enemies/basic_enemy/states/Healed.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0705
height = 16.1886

[sub_resource type="CircleShape2D" id=2]
radius = 286.252

[node name="BasicEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.399782, 0.577266 )
texture = ExtResource( 2 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, -0.645401 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Impacted" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Healed" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="RayCast2D" type="RayCast2D" parent="."]
